--- a/Win64/proj/analysis/analysis.vcxproj.filters
+++ b/Win64/proj/analysis/analysis.vcxproj.filters
@@ -362,6 +362,9 @@
     <ClCompile Include="..\..\..\SRC\analysis\algorithm\equiSolnAlgo\NewtonHallM.cpp">
       <Filter>algorithm</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\DEVELOPER\Source Files AMK\CreepAnalysis.cpp">
+      <Filter>analysis</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\SRC\analysis\analysis\Analysis.h">
@@ -684,6 +687,9 @@
     </ClInclude>
     <ClInclude Include="..\..\..\SRC\analysis\algorithm\equiSolnAlgo\NewtonHallM.h">
       <Filter>algorithm</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\DEVELOPER\Source Files AMK\CreepAnalysis.h">
+      <Filter>analysis</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
