--- a/Win64/proj/material/material.vcxproj.filters
+++ b/Win64/proj/material/material.vcxproj.filters
@@ -1250,6 +1250,18 @@
     <ClCompile Include="..\..\..\SRC\material\uniaxial\OOHystereticMaterial.cpp">
       <Filter>uniaxial</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\DEVELOPER\Source Files AMK\TDConcreteEXP.cpp">
+      <Filter>uniaxial</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\DEVELOPER\Source Files AMK\TDConcrete.cpp">
+      <Filter>uniaxial</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\DEVELOPER\Source Files NT\TDConcreteMC10.cpp">
+      <Filter>uniaxial</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\DEVELOPER\Source Files NT\TDConcreteMC10NL.cpp">
+      <Filter>uniaxial</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\SRC\material\uniaxial\AxialSp.h">
@@ -2250,6 +2262,18 @@
       <Filter>uniaxial</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\SRC\material\uniaxial\SPSW02.h">
+      <Filter>uniaxial</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\DEVELOPER\Source Files AMK\TDConcreteEXP.h">
+      <Filter>uniaxial</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\DEVELOPER\Source Files AMK\TDConcrete.h">
+      <Filter>uniaxial</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\DEVELOPER\Source Files NT\TDConcreteMC10.h">
+      <Filter>uniaxial</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\DEVELOPER\Source Files NT\TDConcreteMC10NL.h">
       <Filter>uniaxial</Filter>
     </ClInclude>
   </ItemGroup>
